// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display tests default renderer 1`] = `
<ForwardRef(WithStyles)
  onClose={[Function]}
  onSubmit={[Function]}
  open={true}
  title={
    <FormattedMessage
      defaultMessage="Display"
      id="cboard.components.Settings.Display.display"
      values={Object {}}
    />
  }
>
  <ForwardRef(WithStyles)
    className="Display"
  >
    <ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              defaultMessage="UI Size"
              id="cboard.components.Settings.Display.uiSize"
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              defaultMessage="Elements size"
              id="cboard.components.Settings.Display.uiSizeSecondary"
              values={Object {}}
            />
          }
        />
        <ForwardRef(WithStyles)
          className="Display__Options"
        >
          <ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              aria-label={
                Object {
                  "defaultMessage": "UI Size",
                  "id": "cboard.components.Settings.Display.uiSize",
                }
              }
              id="uiSize"
              name="uiSize"
              onChange={[Function]}
              value="Standard"
            >
              <ForwardRef(WithStyles)
                value="Standard"
              >
                Object {
                  "defaultMessage": "Standard",
                  "id": "cboard.components.Settings.Display.StandardSize",
                }
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                value="Large"
              >
                Object {
                  "defaultMessage": "Large",
                  "id": "cboard.components.Settings.Display.LargeSize",
                }
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                value="ExtraLarge"
              />
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles) />
      <ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              defaultMessage="Font Size"
              id="cboard.components.Settings.Display.fontSize"
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              defaultMessage="App font size"
              id="cboard.components.Settings.Display.fontSizeSecondary"
              values={Object {}}
            />
          }
        />
        <ForwardRef(WithStyles)
          className="Display__Options"
        >
          <ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              aria-label={
                Object {
                  "defaultMessage": "Font Size",
                  "id": "cboard.components.Settings.Display.fontSize",
                }
              }
              id="fontSize"
              name="fontSize"
              onChange={[Function]}
              value="Standard"
            >
              <ForwardRef(WithStyles)
                value="Standard"
              >
                Object {
                  "defaultMessage": "Standard",
                  "id": "cboard.components.Settings.Display.StandardSize",
                }
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                value="Large"
              >
                Object {
                  "defaultMessage": "Large",
                  "id": "cboard.components.Settings.Display.LargeSize",
                }
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                value="ExtraLarge"
              />
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles) />
      <ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              values={Object {}}
            />
          }
        />
        <ForwardRef(WithStyles)>
          <ForwardRef(WithStyles)
            color="secondary"
            onChange={[Function]}
            value="active"
          />
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles) />
      <ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              values={Object {}}
            />
          }
        />
        <ForwardRef(WithStyles)
          className="Display__Options"
        >
          <ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              id="labelPosition"
              name="labelPosition"
              onChange={[Function]}
            >
              <ForwardRef(WithStyles)
                value="Above"
              />
              <ForwardRef(WithStyles)
                value="Below"
              />
              <ForwardRef(WithStyles)
                value="Hidden"
              />
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles) />
      <ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              values={Object {}}
            />
          }
        />
        <ForwardRef(WithStyles)
          className="Display__Options"
        >
          <ForwardRef(WithStyles)
            color="secondary"
            onChange={[Function]}
            value="active"
          />
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
</ForwardRef(WithStyles)>
`;

exports[`Display tests options behavior 1`] = `
<WithStyles(FullScreenDialog)
  onClose={[Function]}
  onSubmit={[Function]}
  open={true}
  title={
    <FormattedMessage
      defaultMessage="Display"
      id="cboard.components.Settings.Display.display"
      values={Object {}}
    />
  }
>
  <WithStyles(ForwardRef(Paper))
    className="Display"
  >
    <WithStyles(ForwardRef(List))>
      <WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItemText))
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              defaultMessage="UI Size"
              id="cboard.components.Settings.Display.uiSize"
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              defaultMessage="Elements size"
              id="cboard.components.Settings.Display.uiSizeSecondary"
              values={Object {}}
            />
          }
        />
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          className="Display__Options"
        >
          <WithStyles(ForwardRef(FormControl))>
            <WithStyles(ForwardRef(Select))
              aria-label={
                Object {
                  "defaultMessage": "UI Size",
                  "id": "cboard.components.Settings.Display.uiSize",
                }
              }
              id="uiSize"
              name="uiSize"
              onChange={[Function]}
              value="Standard"
            >
              <WithStyles(ForwardRef(MenuItem))
                value="Standard"
              >
                <Component />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                value="Large"
              >
                <Component />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                value="ExtraLarge"
              />
            </WithStyles(ForwardRef(Select))>
          </WithStyles(ForwardRef(FormControl))>
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(Divider)) />
      <WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItemText))
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              defaultMessage="Font Size"
              id="cboard.components.Settings.Display.fontSize"
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              defaultMessage="App font size"
              id="cboard.components.Settings.Display.fontSizeSecondary"
              values={Object {}}
            />
          }
        />
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          className="Display__Options"
        >
          <WithStyles(ForwardRef(FormControl))>
            <WithStyles(ForwardRef(Select))
              aria-label={
                Object {
                  "defaultMessage": "Font Size",
                  "id": "cboard.components.Settings.Display.fontSize",
                }
              }
              id="fontSize"
              name="fontSize"
              onChange={[Function]}
              value="Standard"
            >
              <WithStyles(ForwardRef(MenuItem))
                value="Standard"
              >
                <Component />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                value="Large"
              >
                <Component />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                value="ExtraLarge"
              />
            </WithStyles(ForwardRef(Select))>
          </WithStyles(ForwardRef(FormControl))>
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(Divider)) />
      <WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItemText))
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              values={Object {}}
            />
          }
        />
        <WithStyles(ForwardRef(ListItemSecondaryAction))>
          <WithStyles(ForwardRef(Switch))
            color="secondary"
            onChange={[Function]}
            value="active"
          />
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(Divider)) />
      <WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItemText))
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              values={Object {}}
            />
          }
        />
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          className="Display__Options"
        >
          <WithStyles(ForwardRef(FormControl))>
            <WithStyles(ForwardRef(Select))
              id="labelPosition"
              name="labelPosition"
              onChange={[Function]}
            >
              <WithStyles(ForwardRef(MenuItem))
                value="Above"
              />
              <WithStyles(ForwardRef(MenuItem))
                value="Below"
              />
              <WithStyles(ForwardRef(MenuItem))
                value="Hidden"
              />
            </WithStyles(ForwardRef(Select))>
          </WithStyles(ForwardRef(FormControl))>
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(Divider)) />
      <WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItemText))
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              values={Object {}}
            />
          }
        />
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          className="Display__Options"
        >
          <WithStyles(ForwardRef(Switch))
            color="secondary"
            onChange={[Function]}
            value="active"
          />
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(ListItem))>
    </WithStyles(ForwardRef(List))>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(FullScreenDialog)>
`;

exports[`Display tests options behavior 2`] = `
<WithStyles(FullScreenDialog)
  onClose={[Function]}
  onSubmit={[Function]}
  open={true}
  title={
    <FormattedMessage
      defaultMessage="Display"
      id="cboard.components.Settings.Display.display"
      values={Object {}}
    />
  }
>
  <WithStyles(ForwardRef(Paper))
    className="Display"
  >
    <WithStyles(ForwardRef(List))>
      <WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItemText))
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              defaultMessage="UI Size"
              id="cboard.components.Settings.Display.uiSize"
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              defaultMessage="Elements size"
              id="cboard.components.Settings.Display.uiSizeSecondary"
              values={Object {}}
            />
          }
        />
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          className="Display__Options"
        >
          <ForwardRef(RadioGroup)
            aria-label={
              Object {
                "defaultMessage": "UI Size",
                "id": "cboard.components.Settings.Display.uiSize",
              }
            }
            className="Display__Options__Row"
            name="uiSize"
            onChange={[Function]}
            value="something"
          >
            <WithStyles(ForwardRef(FormControlLabel))
              control={<ForwardRef(WithStyles) />}
              label={
                Object {
                  "defaultMessage": "Standard",
                  "id": "cboard.components.Settings.Display.StandardSize",
                }
              }
              labelPlacement="start"
              value="Standard"
            />
            <WithStyles(ForwardRef(FormControlLabel))
              control={<ForwardRef(WithStyles) />}
              label={
                Object {
                  "defaultMessage": "Large",
                  "id": "cboard.components.Settings.Display.LargeSize",
                }
              }
              labelPlacement="start"
              value="Large"
            />
            <WithStyles(ForwardRef(FormControlLabel))
              control={<ForwardRef(WithStyles) />}
              labelPlacement="start"
              value="ExtraLarge"
            />
          </ForwardRef(RadioGroup)>
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(Divider)) />
      <WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItemText))
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              defaultMessage="Font Size"
              id="cboard.components.Settings.Display.fontSize"
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              defaultMessage="App font size"
              id="cboard.components.Settings.Display.fontSizeSecondary"
              values={Object {}}
            />
          }
        />
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          className="Display__Options"
        >
          <ForwardRef(RadioGroup)
            aria-label={
              Object {
                "defaultMessage": "Font Size",
                "id": "cboard.components.Settings.Display.fontSize",
              }
            }
            className="Display__Options__Row"
            name="fontSize"
            onChange={[Function]}
            value="Standard"
          >
            <WithStyles(ForwardRef(FormControlLabel))
              control={<ForwardRef(WithStyles) />}
              label={
                Object {
                  "defaultMessage": "Standard",
                  "id": "cboard.components.Settings.Display.StandardSize",
                }
              }
              labelPlacement="start"
              value="Standard"
            />
            <WithStyles(ForwardRef(FormControlLabel))
              control={<ForwardRef(WithStyles) />}
              label={
                Object {
                  "defaultMessage": "Large",
                  "id": "cboard.components.Settings.Display.LargeSize",
                }
              }
              labelPlacement="start"
              value="Large"
            />
            <WithStyles(ForwardRef(FormControlLabel))
              control={<ForwardRef(WithStyles) />}
              labelPlacement="start"
              value="ExtraLarge"
            />
          </ForwardRef(RadioGroup)>
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(Divider)) />
      <WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItemText))
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              values={Object {}}
            />
          }
        />
        <WithStyles(ForwardRef(ListItemSecondaryAction))>
          <WithStyles(ForwardRef(Switch))
            color="secondary"
            onChange={[Function]}
            value="active"
          />
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(Divider)) />
      <WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItemText))
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              values={Object {}}
            />
          }
        />
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          className="Display__Options"
        >
          <ForwardRef(RadioGroup)
            className="Display__Options__Row"
            name="labelPosition"
            onChange={[Function]}
          >
            <WithStyles(ForwardRef(FormControlLabel))
              control={<ForwardRef(WithStyles) />}
              labelPlacement="start"
              value="Above"
            />
            <WithStyles(ForwardRef(FormControlLabel))
              control={<ForwardRef(WithStyles) />}
              labelPlacement="start"
              value="Below"
            />
            <WithStyles(ForwardRef(FormControlLabel))
              control={<ForwardRef(WithStyles) />}
              labelPlacement="start"
              value="Hidden"
            />
          </ForwardRef(RadioGroup)>
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(Divider)) />
      <WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItemText))
          className="Display__ListItemText"
          primary={
            <FormattedMessage
              values={Object {}}
            />
          }
          secondary={
            <FormattedMessage
              values={Object {}}
            />
          }
        />
        <WithStyles(ForwardRef(ListItemSecondaryAction))
          className="Display__Options"
        >
          <WithStyles(ForwardRef(Switch))
            color="secondary"
            onChange={[Function]}
            value="active"
          />
        </WithStyles(ForwardRef(ListItemSecondaryAction))>
      </WithStyles(ForwardRef(ListItem))>
    </WithStyles(ForwardRef(List))>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(FullScreenDialog)>
`;
